--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "cross-env RUNNING_ENV=prod nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "cross-env RUNNING_ENV=dev nest start --watch",
+    "start:debug": " nest start --debug --watch",
+    "start:prod": "cross-env RUNNING_ENV=prod  node dist/main",
+    "start:hotdev": "cross-env RUNNING_ENV=dev nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,14 +22,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.5.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.1.6",
+    "@nestjs/swagger": "^6.1.3",
+    "axios": "^1.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cross-env": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "run-script-webpack-plugin": "^0.1.1",
+    "rxjs": "^7.2.0",
+    "webpack": "^5.74.0",
+    "webpack-node-externals": "^3.0.0",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -69,5 +81,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+    
   }
 }
