modified:   .config/.dev.yaml 	modified:   .config/.prod.yaml

--- a/.config/.prod.yaml
+++ b/.config/.prod.yaml
@@ -1,7 +1,7 @@
-DATASET:
-  name:'数据库一'
-  userName:'用户名'
-  passowrd:'密码'
-
 TEST_VALUE:
-  name: "dev_cookie_正式"
+  name: "dev_cookie"
+FEISHU_CONFIG:
+  FEISHU_URL: https://open.feishu.cn/open-apis
+  FEISHU_API_HOST: https://open.feishu.cn
+  FEISHU_APP_ID: cli_a3e9c755bef0d013
+  FEISHU_APP_SECRET: hkM3ICZiMep9hzjwJmE7whlrAzNqqdFR
